<resources>
    <string name="app_name">DB_App</string>
    <string name="app_developers">Juniell, LeoValdez, Teacons</string>

    <string name="reg_str">Регистрация</string>
    <string name="auth_str">Авторизация</string>
    <string name="button_str">Зарегистрироваться</string>
    <string name="reg_to_auth">Перейти к авторизации</string>
    <string name="log_str">Логин</string>
    <string name="pass_str">Пароль</string>
    <string name="email_str">Электронная почта</string>
    <string name="next_str">Далее</string>
    <string name="back_str">Назад</string>
    <string name="in_str">Войти</string>
    <string name="out_str">Выйти</string>

    <string name="name_str">Название</string>
    <string name="author_str">Автор</string>
    <string name="author_top">Автор:</string>
    <string name="year_str">Год</string>
    <string name="genre_str">Жанр</string>
    <string name="book_series_str">Серия книг</string>
    <string name="film_series_str">Серия фильмов</string>
    <string name="album_str">Альбом</string>
    <string name="top_str">Топ</string>
    <string name="pos_str">Место</string>
    <string name="desc_str">Описание</string>
    <string name="rating_str">Рейтинг</string>
    <string name="dur_str">Время</string>
    <string name="actor_str">Актёры</string>
    <string name="maker_str">Съёмочная группа</string>
    <string name="book_film_str">Книга</string>
    <string name="mus_film_str">Музыка</string>

    <string name="choose_genre_book">Выберите любимые жанры книг</string>
    <string name="choose_genre_film">Выберите любимые жанры фильмов</string>
    <string name="choose_genre_music">Выберите любимые жанры музыки</string>

    <string name="prof_str">Профиль</string>
    <string name="edit_button_str">Редактировать профиль</string>
    <string name="change_genre_str">Изменить любимые жанры</string>
    <string name="save_str">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="books_str">Книги</string>
    <string name="films_str">Фильмы</string>

    <string name="catalog_menu">Каталог медиа</string>
    <string name="tops_menu">Топы</string>
    <string name="recommend_menu">Рекомендации</string>
    <string name="viewed_menu">Просмотренное</string>
    <string name="super_user_menu">Изменение БД</string>

    <string name="change_login">Изменение логина</string>
    <string name="change_email">Изменение почты</string>
    <string name="change_pass">Изменение пароля</string>
    <string name="new_login">Введите новый логин</string>
    <string name="new_email">Введите новую почту</string>
    <string name="current_pass">Введите текущий пароль</string>
    <string name="new_pass">Введите новый пароль</string>
    <string name="confirm_new_pass">Повторите новый пароль</string>
    <string name="change_login_complete">Имя пользователя успешно изменено. Пожалуйста, авторизируйтесь повторно.</string>
    <string name="change_email_complete">Email успешно изменён.</string>
    <string name="change_pass_complete">Пароль успешно изменён.</string>

    <string name="err_edit_empty">Введите данные и повторите попытку.</string>
    <string name="err_edit_incorrect">Введённые данные некорректны.</string>
    <string name="err_edit_confirm_incorrect">Пароль для подтверждения не совпадает с новым паролем.</string>
    <string name="err_username_length">Имя пользователя должно быть не больше 20 символов.</string>
    <string name="err_pass_length_max">Пароль должен быть не больше 32 символов.</string>
    <string name="err_pass_length_min">Пароль должен быть не менее 6 символов.</string>
    <string name="err_curr_pass_incorrect">Введён неверный текущий пароль.</string>

    <string name="err_auth_empty">Введите логин и пароль, а затем повторите попытку.</string>
    <string name="err_auth_data">Введён неверный логин или пароль. Повторите попытку.</string>
    <string name="err_username">Пользователь с таким именем уже существует.</string>
    <string name="err_email">Указанный email уже занят.</string>
    <string name="edit_pass">Изменить пароль</string>
    <string name="rating">Рейтинг</string>

    <string name="duration">%1$d мин</string>
    <string name="book_not_viewed">Вы ещё не прочитали эту книгу.</string>
    <string name="film_not_viewed">Вы ещё не посмотрели этот фильм.</string>
    <string name="music_not_viewed">Вы ещё не слушали эту песню.</string>
    <string name="book_not_rated">Вы ещё не оценили эту книгу. Вы можете сделать это ниже.</string>
    <string name="film_not_rated">Вы ещё не оценили этот фильм. Вы можете сделать это ниже.</string>
    <string name="music_not_rated">Вы ещё не оценили эту песню. Вы можете сделать это ниже.</string>
    <string name="your_rating">"Ваша оценка: %1$s. Вы можете изменить свою оценку ниже.</string>
    <string name="err_unknown">Упс! Кажется, что-то пошло не так. Повторите попытку позже.</string>

    <string name="place_in_top">%1$d место</string>

    <string name="genres_str">Жанры</string>
    <string name="artists_str">Исполнители</string>
    <string name="min_str">min</string>
    <string name="max_str">max</string>
    <string name="duration_str">Продолжительность</string>
    <string name="reset_str">Сбросить</string>
    <string name="choose_str">Выбрать</string>

</resources>