<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="70dp">


    <TextView
        android:id="@+id/reg_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="@font/lato"
        android:text="@string/reg_str"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:paddingTop="20dp"
        android:layout_margin="30dp"
        android:inputType="textPersonName"
        android:hint="@string/log_str"
        android:textSize="20sp"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_text" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:paddingTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        android:hint="@string/pass_str"
        android:textSize="20sp"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_reg" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:paddingTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_str"
        android:textSize="20sp"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_reg" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button_str"
        android:background="#3F51B5"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg" />

    <Button
        android:id="@+id/reg_to_auth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:background="#3F51B5"
        android:text="@string/reg_to_auth"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_reg" />


</androidx.constraintlayout.widget.ConstraintLayout>
