<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorization"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/auth_text"
        android:layout_width="0dp"
        android:layout_marginTop="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:gravity="center_horizontal"
        android:text="@string/auth_str"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_auth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:counterOverflowTextColor="@color/error"
        app:counterTextAppearance="@style/CounterOverflow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_text">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:hint="@string/log_str"
        android:textSize="20sp"
        android:textColorHint="#808080" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_auth_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:counterOverflowTextColor="@color/error"
        app:counterTextAppearance="@style/CounterOverflow"
        app:layout_constraintEnd_toEndOf="@+id/login_auth_layout"
        app:layout_constraintStart_toStartOf="@+id/login_auth_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_auth_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:hint="@string/pass_str"
            android:inputType="textPassword"
            android:maxLength="32"
            android:textColorHint="#808080"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
       android:layout_marginHorizontal="50dp"
        android:text="@string/in_str"
        style="@style/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_auth_layout" />

    <Button
        android:id="@+id/auth_to_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/button_str"
        style="@style/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_in" />

</androidx.constraintlayout.widget.ConstraintLayout>
