<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/film_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/content_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:src="@drawable/film_def"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content_poster">

                <TableRow>
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:gravity="center_horizontal"
                        android:text="@string/name_str"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/year_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="2000"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/book_music_author_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/author_str"
                        android:textColor="#444b52"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/book_music_author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Дж.К.Роулинг"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/film_music_dur_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/dur_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/film_music_dur"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="142 мин"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/film_actor_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/actor_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/film_actor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Дэниэл Рэдклифф"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/film_maker_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/maker_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/film_maker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Альфонсо Куарон"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/genre_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Фэнтези"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/film_series_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/film_series_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/film_series"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Гарри Поттер"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/book_series_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/book_series_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/book_series"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Гарри Поттер"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/music_album_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/album_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/music_album"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Origins"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/film_book_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/book_film_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/film_book"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="Гарри Поттер и узник Азкабана"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/film_music_row"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/mus_film_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/film_music"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="John Williams — Lumos!"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>


                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/top_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/content_top"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="250 лучших фильмов"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato"
                        android:text="@string/pos_str"
                        android:textColor="#444b52"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/content_pos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/lato"
                        tools:text="1"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/book_film_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/lato"
                tools:text="@string/desc_str"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />


            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_film_desc" />

            <Button
                android:id="@+id/content_like"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:drawable/ic_menu_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toBottomOf="@+id/book_film_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
